--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
 .idea/
 composer.lock
 vendor/
+
+###> friendsofphp/php-cs-fixer ###
+/.php-cs-fixer.cache
+###< friendsofphp/php-cs-fixer ###
+
+###> phpunit/phpunit ###
+/phpunit.xml
+/.phpunit.cache
+###< phpunit/phpunit ###
