--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,11 @@
 {
     "name": "fusonic/opengraph",
     "description": "PHP library for consuming and publishing Open Graph resources.",
-    "keywords": ["opengraph"],
+    "keywords": [
+        "opengraph"
+    ],
     "type": "library",
-    "homepage": "https://github.com/fusonic/fusonic-opengraph",
+    "homepage": "https://github.com/fusonic/opengraph",
     "license": "MIT",
     "authors": [
         {
@@ -22,20 +24,34 @@
         }
     },
     "require": {
-        "php": "^7.4|^8.0",
+        "php": "^8.1",
         "ext-dom": "*",
-        "symfony/dom-crawler": "^3.0|^4.0|^5.0|^6.0",
-        "symfony/css-selector": "^3.0|^4.0|^5.0|^6.0",
+        "symfony/css-selector": "^5.4 || ^6.4 || ^7.1",
+        "symfony/dom-crawler": "^5.4 || ^6.4 || ^7.1",
         "psr/http-client": "^1.0",
         "psr/http-factory": "^1.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.0",
-        "symfony/http-client": "^6.0",
-        "nyholm/psr7": "^1.2"
+        "friendsofphp/php-cs-fixer": "^3.65",
+        "nyholm/psr7": "^1.8",
+        "phpstan/phpstan": "^2.0",
+        "phpstan/phpstan-deprecation-rules": "^2.0",
+        "phpstan/phpstan-phpunit": "^2.0",
+        "phpstan/phpstan-strict-rules": "^2.0",
+        "phpunit/phpunit": "^10.5 || ^11.4",
+        "symfony/http-client": "^5.4 || ^6.4 || ^7.1"
     },
     "suggest": {
-        "symfony/http-client": "^5.0",
-        "nyholm/psr7": "^1.2"
+        "symfony/http-client": "^5.4 || ^6.4 || ^7.1",
+        "nyholm/psr7": "^1.8"
+    },
+    "scripts": {
+        "phpcs:check": "XDEBUG_MODE=off vendor/bin/php-cs-fixer check -v --diff",
+        "phpcs:fix": "XDEBUG_MODE=off vendor/bin/php-cs-fixer fix -v",
+        "phpstan": "XDEBUG_MODE=off php -d memory_limit=2048M vendor/bin/phpstan analyse",
+        "test": "XDEBUG_MODE=off vendor/bin/phpunit --testdox"
+    },
+    "config": {
+        "sort-packages": true
     }
 }
